Actualización del frontend diseño y funcionalidades

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* CSS Base - Jeremy Fitness Platform */
+/* CSS Base - NackRat Platform */
 @import './styles/tailwind.css';
 
 /* Estilos adicionales específicos */
